<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/photosFragment"
        android:icon="@android:drawable/ic_menu_gallery"
        android:title="@string/title_photos" />
    <item android:id="@+id/searchFragment"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/title_search" />
    <item android:id="@+id/categoriesFragment"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:title="@string/title_categories" />
    <item android:id="@+id/aiQueueFragment"
        android:icon="@android:drawable/ic_menu_recent_history"
        android:title="@string/title_ai" />
    <item android:id="@+id/profileFragment"
        android:icon="@android:drawable/ic_menu_compass"
        android:title="@string/title_profile" />
</menu>
