<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:id="@+id/note_search_input_row"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <EditText
            android:id="@+id/note_search_input"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="@string/search_hint"
            android:inputType="text"
            android:imeOptions="actionSearch"
            android:singleLine="true"
            android:layout_marginEnd="8dp" />

        <Button
            android:id="@+id/note_search_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_action" />
    </LinearLayout>

    <RadioGroup
        android:id="@+id/note_search_mode"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@+id/note_search_input_row"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <RadioButton
            android:id="@+id/note_search_mode_keyword"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/search_mode_keyword" />

        <RadioButton
            android:id="@+id/note_search_mode_semantic"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/search_mode_semantic" />

        <RadioButton
            android:id="@+id/note_search_mode_hybrid"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/search_mode_hybrid" />
    </RadioGroup>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/note_search_recycler"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@+id/note_search_mode"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/note_search_empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_results_empty"
        android:textColor="#999"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/note_search_mode"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
